objects/FinServ__IdentificationDocument__c.object
<CustomObject>
    <description>Represents information about documents used to verify a person&apos;s identity.</description>
    <fields>
        <fullName>FinServ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Identification Document</relationshipLabel>
        <relationshipName>IdentificationDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__DocumentType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Green Card</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__IssueDate__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__IssuingCountry__c</fullName>
        <label>Issuing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__VerifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IdentificationDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__VerifiedOn__c</fullName>
        <label>Verified On</label>
        <type>DateTime</type>
    </fields>
    <label>Identification Document</label>
    <nameField>
        <displayFormat>DOC-{000000000}</displayFormat>
        <label>Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identification Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__ExpDateCannotBeLaterThanStart</fullName>
        <active>true</active>
        <description>Error message when the expiration date is earlier than the issue date.</description>
        <errorConditionFormula>FinServ__IssueDate__c &gt; FinServ__ExpirationDate__c</errorConditionFormula>
        <errorMessage>The expiration date can&apos;t be earlier than the issue date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__IssueDateCannotBeInFuture</fullName>
        <active>true</active>
        <description>Error message when the issue date is in the future.</description>
        <errorConditionFormula>FinServ__IssueDate__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>The issue date can&apos;t be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__VerificationDateTimeCannotBeInFuture</fullName>
        <active>true</active>
        <description>Error message when the verification date and time are in the future.</description>
        <errorConditionFormula>FinServ__VerifiedOn__c &gt; NOW()</errorConditionFormula>
        <errorMessage>Verification date and time can&apos;t be in the future.</errorMessage>
    </validationRules>
</CustomObject>